# AgriInsight

./: .dockerignore  .env.auth-spike.example  .env.example  .gitignore  Dockerfile  README.md  compose.auth-spike.yaml  compose.backend.yaml  compose.yaml  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.streamlit/: config.toml
backend/: .dockerignore  .gitignore  Dockerfile  pom.xml
dashboard/: app.py  cost_analysis_formatting.py  cost_analysis_forms.py  cost_analysis_page.py  cost_analysis_presenters.py  cost_analysis_session.py  cost_analysis_snapshot.py  cost_procurement_presenter.py  page_visuals.py
docs/: architecture.md  backend-deployment.md  backend-development.md  code-standards.md  codebase-summary.md  data-contracts.md  deployment-guide.md  design-guidelines.md  kpi-catalog.md  mvp-acceptance.md  project-overview-pdr.md  project-roadmap.md  reporting-and-local-operations.md  system-architecture.md
scripts/: backup-backend-postgres.ps1  check-workspace-disk.ps1  configure-demo-oidc.ps1  evaluate-better-auth-fit.ps1  export-backend-openapi.ps1  restore-backend-postgres.ps1  run-backend-migrations.ps1  run-backend-tests.ps1  run-big-data-demo.ps1  run-web-auth-spike-tests.ps1
tests/: conftest.py  test_config_profiles.py  test_cost_analysis_snapshot.py  test_cost_dashboard.py  test_cost_metrics.py  test_cost_report_assets.py  test_cost_report_exports.py  test_cost_report_pdf.py  test_cost_report_service.py  test_cost_report_xlsx.py  test_cost_report_xlsx_filesystem_failures.py  test_dashboard.py  test_local_security_boundaries.py  test_pipeline.py  (+2 more)
(+1036 files in other folders)
