[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "agriinsight"
version = "0.2.0"
description = "Enterprise agriculture analytics platform"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  "numpy>=2.0,<3",
  "pandas>=2.2,<4",
]

[project.optional-dependencies]
dashboard = [
  "plotly>=6,<7",
  "streamlit>=1.58,<2",
]
dev = [
  "pytest>=8,<10",
]

[project.scripts]
agriinsight = "agriinsight.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agriinsight = ["*.sql"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
